--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "scikit-learn>=1.6.1",
     "pandas>=2.2.3",
     "python-dotenv>=1.1.0",
+    "pythermalcomfort>=3.1.1",
 ]
 
 [[tool.pip.additional-index-urls]]
